# fp-succinct-trees-1

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  create_bitvec.rs  localtests.sh  travis_coverage.sh
benches/: min_max_benchmark.rs  treebench.rs
src/: bp_tree.rs  lib.rs  louds_tree.rs  main.rs  succinct_tree.rs
src/common/: errors.rs  min_max.rs  mod.rs  succinct_tree.rs
src/datastructures/: min_max.rs  mod.rs  rmM_node.rs
src/trees/: bp_tree.rs  louds_tree.rs  mod.rs
testdata/: bphuge.benchdata  bptree_invalid.testdata  loudshuge.benchdata  loudstree.testdata
