[package]
name = "fp-succinct-trees-1"
version = "0.1.0"
authors = ["David Mehren <dmehren1@gmail.com>"]

[dependencies]
bv = "0.7"
bio = "0.21"
id_tree = "1.3.0"
failure = "0.1.1"
serde = "1.0.66"
serde_derive = "1.0.66"
bincode = "1.0.1"
rand = "0.5.4"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "treebench"
harness = false